tests/invalid/from_relative_import_is_directory/main.py
from .rel_module import something
